Fixed the broken index exchange and some minor css stuff

--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -177,7 +177,7 @@
 .work-category-pictures {
     position: relative;
     @include tablet {
-        height: 55vh;
+        height: 60vh;
     }
     @include mobile {
         height: 45vh;
@@ -237,7 +237,7 @@
     }
     @include mobile {
         width: auto;
-        height: 50vh;
+        height: 47vh;
     }
 }
 
